--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -92,7 +92,7 @@
 <div class="hovermap twelve columns">
 	<img class="hoverimg" src="../images/open map hover.png">
 		<div class="showdiv">
-			<a class="image-link" href="../images/maps/Screen Shot 2017-04-22 at 9.56.02 pm.png"><img class="map" src="../images/maps/Screen Shot 2017-04-22 at 9.56.02 pm.png"></a>
+			<a class="image-link" href="../images/maps/18120474_10154810020233860_19781780_o.jpg"><img class="map" src="../images/maps/18120474_10154810020233860_19781780_o.jpg"></a>
 			<p class="maptext">*Go to the locations marked on the map to discover the next part of the story*</p>
 			<img class="hoverimg" src="../images/open map hoverbottom.png">
 		</div>
