--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -73,6 +73,10 @@
 
 
 <div class="container main">
+
+<video autoplay loop>
+	<source src="../Cloud Fly- Free Looping Video Background.mp4">
+</video>
 	<div class="row">
 		<div class="ten columns offset-by-one">
 			<p>There was once a very rich merchant, who had six children, three sons, and three daughters; being a man of sense, he spared no cost for their education, but gave them all kinds of masters. His daughters were extremely handsome, especially the youngest. When she was little everybody admired her, and called her "The little Beauty;" so that, as she grew up, she still went by the name of Beauty, which made her sisters very jealous.</p>
@@ -85,14 +89,7 @@
 			
 			
 		</div>
-		
-		
-	</div>
-
-<video autoplay loop>
-	<source src="../Cloud Fly- Free Looping Video Background.mp4">
-</video>
-			
+					
 <div class="hovermap twelve columns">
 	<img class="hoverimg" src="../images/open map hover.png">
 
@@ -103,6 +100,29 @@
 			<img class="hoverimg" src="../images/open map hoverbottom.png">
 		</div>
 </div>
+		<div class="ten columns offset-by-one">
+			<p>He was within thirty miles of his own house, thinking on the pleasure he should have in seeing his children again, when going through a large forest he lost himself. It rained and snowed terribly; besides, the wind was so high, that it threw him twice off his horse, and night coming on, he began to apprehend being either starved to death with cold and hunger, or else devoured by the wolves, whom he heard howling all round him, when, on a sudden, looking through a long walk of trees, he saw a light at some distance, and going on a little farther perceived it came from a palace illuminated from top to bottom. The merchant returned God thanks for this happy discovery, and hastened to the place, but was greatly surprised at not meeting with any one in the outer courts. His horse followed him, and seeing a large stable open, went in, and finding both hay and oats, the poor beast, who was almost famished, fell to eating very heartily; the merchant tied him up to the manger, and walking towards the house, where he saw no one, but entering into a large hall, he found a good fire, and a table plentifully set out with but one cover laid. As he was wet quite through with the rain and snow, he drew near the fire to dry himself. "I hope," said he, "the master of the house, or his servants will excuse the liberty I take; I suppose it will not be long before some of them appear."</p>
+			<p>He waited a considerable time, until it struck eleven, and still nobody came. At last he was so hungry that he could stay no longer, but took a chicken, and ate it in two mouthfuls, trembling all the while. After this he drank a few glasses of wine, and growing more courageous he went out of the hall, and crossed through several grand apartments with magnificent furniture, until he came into a chamber, which had an exceeding good bed in it, and as he was very much fatigued, and it was past midnight, he concluded it was best to shut the door, and go to bed.</p>
+			<p>It was ten the next morning before the merchant waked, and as he was going to rise he was astonished to see a good suit of clothes in the room of his own, which were quite spoiled; certainly, said he, this palace belongs to some kind fairy, who has seen and pitied my distress. He looked through a window, but instead of snow saw the most delightful arbors, interwoven with the beautifullest flowers that were ever beheld. He then returned to the great hall, where he had supped the night before, and found some chocolate ready made on a little table. "Thank you, good Madam Fairy," said he aloud, "for being so careful, as to provide me a breakfast; I am extremely obliged to you for all your favors."</p>
+			<p>The good man drank his chocolate, and then went to look for his horse, but passing through an arbor of roses he remembered Beauty's request to him, and gathered a branch on which were several; immediately he heard a great noise, and saw such a frightful Beast coming towards him, that he was ready to faint away.</p>
+			
+			
+		</div>
+		
+		<div class="hovermap twelve columns">
+	<img class="hoverimg" src="../images/open map hover.png">
+
+		<div class="showdiv">
+		<a class="image-link" href="../images/maps/18136356_10154811169058860_1732148975_n.jpg"><img class="map" src="../images/maps/18136356_10154811169058860_1732148975_n.jpg"></a>
+			
+			<p class="maptext">*Go to the locations marked on the map to discover the next part of the story*</p>
+			<img class="hoverimg" src="../images/open map hoverbottom.png">
+		</div>
+</div>
+	</div>
+
+
+
 
 
 </div>
