--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -14,6 +14,7 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Great+Vibes|Raleway:400,700" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -138,11 +139,57 @@
 			
 			
 		</div>
+<div class="hovermap twelve columns">
+	<img class="hoverimg" src="../images/open map hover.png">
+
+		<div class="showdiv">
+		<a class="image-link" href="../images/maps/map 3.jpg"><img class="map" src="../images/maps/map 3.jpg"></a>
+			
+			<p class="maptext">*Go to the locations marked on the map to discover the next part of the story*</p>
+			<img class="hoverimg" src="../images/open map hoverbottom.png">
+		</div>
+</div>
+
+
+<div class="ten columns offset-by-one">
+	<p>At noon she found dinner ready, and while at table, was entertained with an excellent concert of music, though without seeing anybody. But at night, as she was going to sit down to supper, she heard the noise Beast made, and could not help being sadly terrified.</p>
+	<p><span id="beastspeech">"Beauty, will you give me leave to see you sup?"</span>said the monster, </p>
+	
+	<p class="right"><span class="beautyspeech">"That is as you please,"</span>answered Beauty trembling.</p>
+	
+	<p class="beastspeech left">No, you alone are mistress here; you need only bid me gone, if my presence is troublesome, and I will immediately withdraw. But, tell me, do not you think me very ugly?</p>
+	<p class="right"><span class="beautyspeech">That is true, for I cannot tell a lie, but I believe you are very good natured.</span></p>
+	<p class="beastspeech left">So I am, but then, besides my ugliness, I have no sense; I know very well, that I am a poor, silly, stupid creature.</p>
+	<p class="right beautyspeech">'Tis no sign of folly to think so, for never did fool know this, or had so humble a conceit of his own understanding.</p>
+	<p class="beastspeech">Eat then, Beauty, and endeavor to amuse yourself in your palace, for everything here is yours, and I should be very uneasy, if you were not happy.</p>
+	<p class="right beautyspeech">You are very obliging. I own I am pleased with your kindness, and when I consider that, your deformity scarce appears.</p>
+	<p class="beastspeech">Yes, yes, my heart is good, but still I am a monster.</p>
+	<p class="right beautyspeech">Among mankind, there are many that deserve that name more than you, and I prefer you, just as you are, to those, who, under a human form, hide a treacherous, corrupt, and ungrateful heart.</p>
+	<p class="beastspeech">If I had sense enough, I would make a fine compliment to thank you, but I am so dull, that I can only say, I am greatly obliged to you.</p>
+	<p>Beauty ate a hearty supper, and had almost conquered her dread of the monster; but she had like to have fainted away, when he said to her,</p>
+	<p class="beastspeech">Beauty, will you be my wife?</p>
+	<p>She was some time before she dared answer, for she was afraid of making him angry, if she refused. At last, however, she said trembling,</p>
+	<p class="right beautyspeech">No Beast.</p>
+	<p class="left">Immediately the poor monster went to sigh, and hissed so frightfully, that the whole palace echoed. But Beauty soon recovered her fright, for Beast having said, in a mournful voice,</p>
+	<p class="beastspeech">Then farewell, Beauty.</p>
+	<p>left the room; and only turned back, now and then, to look at her as he went out.</p>
+	<p>When Beauty was alone, she felt a great deal of compassion for poor Beast. "Alas," said she, "'tis thousand pities, anything so good natured should be so ugly."</p>
+	<p>Beauty spent three months very contentedly in the palace. Every evening Beast paid her a visit, and talked to her, during supper, very rationally, with plain good common sense, but never with what the world calls wit; and Beauty daily discovered some valuable qualifications in the monster, and seeing him often had so accustomed her to his deformity, that, far from dreading the time of his visit, she would often look on her watch to see when it would be nine, for the Beast never missed coming at that hour. There was but one thing that gave Beauty any concern, which was, that every night, before she went to bed, the monster always asked her, if she would be his wife. One day she said to him,</p>
+	<p class="right beautyspeech">Beast, you make me very uneasy, I wish I could consent to marry you, but I am too sincere to make you believe that will ever happen; I shall always esteem you as a friend, endeavor to be satisfied with this.</p>
+	<p class="beastspeech">I must, for, alas! I know too well my own misfortune, but then I love you with the tenderest affection. However, I ought to think myself happy, that you will stay here; promise me never to leave me.</p>
+	<p>Beauty blushed at these words; she had seen in her glass, that her father had pined himself sick for the loss of her, and she longed to see him again.</p>
+	<p class="right beautyspeech">I could, indeed, promise never to leave you entirely, but I have so great a desire to see my father, that I shall fret to death, if you refuse me that satisfaction."</p>
+	<p class="beastspeech">I had rather die myself, than give you the least uneasiness. I will send you to your father, you shall remain with him, and poor Beast will die with grief.</p>
+	<p class="right"><span class="beautyspeech">No,</span> said Beauty, weeping,</p>
+	<p class="right beautyspeech">I love you too well to be the cause of your death. I give you my promise to return in a week. You have shown me that my sisters are married, and my brothers gone to the army; only let me stay a week with my father, as he is alone.</p>
+	<p class="beastspeech" id="beastspeechbottom">You shall be there tomorrow morning, but remember your promise. You need only lay your ring on a table before you go to bed, when you have a mind to come back. Farewell Beauty.</p> 
+	<p>Beast sighed, as usual, bidding her good night, and Beauty went to bed very sad at seeing him so afflicted.</p>
+			
+			
+		</div>
+
 
 	</div>
-
-
-
 
 
 </div>
