--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -143,7 +143,7 @@
 	<img class="hoverimg" src="../images/open map hover.png">
 
 		<div class="showdiv">
-		<a class="image-link" href="../images/maps/map 3.jpg"><img class="map" src="../images/maps/map 3.jpg"></a>
+		<a class="image-link" href="../images/maps/3.jpg"><img class="map" src="../images/maps/3.jpg"></a>
 			
 			<p class="maptext">*Go to the locations marked on the map to discover the next part of the story*</p>
 			<img class="hoverimg" src="../images/open map hoverbottom.png">
@@ -187,7 +187,16 @@
 			
 			
 		</div>
+<div class="hovermap twelve columns">
+	<img class="hoverimg" src="../images/open map hover.png">
 
+		<div class="showdiv">
+		<a class="image-link" href="../images/maps/4.jpg"><img class="map" src="../images/maps/4.jpg"></a>
+			
+			<p class="maptext">*Go to the locations marked on the map to discover the next part of the story*</p>
+			<img class="hoverimg" src="../images/open map hoverbottom.png">
+		</div>
+</div>
 
 	</div>
 
