--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -198,6 +198,16 @@
 		</div>
 </div>
 
+
+<div class="ten columns offset-by-one">
+	<p>In the meantime, Beauty could not help reflecting on herself, for the uneasiness she was likely to cause poor Beast, whom she sincerely loved, and really longed to see again. The tenth night she spent at her father's, she dreamed she was in the palace garden, and that she saw Beast extended on the grass plat, who seemed just expiring, and, in a dying voice, reproached her with her ingratitude. Beauty started out of her sleep, and bursting into tears. "Am I not very wicked," said she, "to act so unkindly to Beast, that has studied so much, to please me in everything? Is it his fault if he is so ugly, and has so little sense? He is kind and good, and that is sufficient. Why did I refuse to marry him? I should be happier with the monster than my sisters are with their husbands; it is neither wit, nor a fine person, in a husband, that makes a woman happy, but virtue, sweetness of temper, and complaisance, and Beast has all these valuable qualifications. It is true, I do not feel the tenderness of affection for him, but I find I have the highest gratitude, esteem, and friendship; I will not make him miserable, were I to be so ungrateful I should never forgive myself." Beauty having said this, rose, put her ring on the table, and then laid down again; scarce was she in bed before she fell asleep, and when she waked the next morning, she was overjoyed to find herself in the Beast's palace.</p>
+	<p>She put on one of her richest suits to please him, and waited for evening with the utmost impatience, at last the wished-for hour came, the clock struck nine, yet no Beast appeared. Beauty then feared she had been the cause of his death; she ran crying and wringing her hands all about the palace, like one in despair; after having sought for him everywhere, she recollected her dream, and flew to the canal in the garden, where she dreamed she saw him. There she found poor Beast stretched out, quite senseless, and, as she imagined, dead. She threw herself upon him without any dread, and finding his heart beat still, she fetched some water from the canal, and poured it on his head. Beast opened his eyes, and said to Beauty, "You forgot your promise, and I was so afflicted for having lost you, that I resolved to starve myself, but since I have the happiness of seeing you once more, I die satisfied."</p>
+			
+			
+		</div>
+
+
+
 	</div>
 
 
